crates/pardosa-genome/tests/compile_fail/array_usize.rs
use pardosa_genome::GenomeSafe;

#[derive(GenomeSafe)]
struct Bad {
    counts: [usize; 4],
}

fn main() {}
