crates/pardosa-genome/tests/compile_fail/array_usize.stderr
error: GenomeSafe: usize has platform-dependent size. Use u32/u64/i32/i64 for portable serialization.
 --> tests/compile_fail/array_usize.rs:5:14
  |
5 |     counts: [usize; 4],
  |              ^^^^^
